--- a/0x00-Webpack/task_1/package.json
+++ b/0x00-Webpack/task_1/package.json
@@ -9,7 +9,7 @@
     "build": "webpack"
   },
   "keywords": [],
-  "author": "",
+  "author": "kipngeno kevin",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.91.0",
