--- a/0x00-Webpack/task_2/package.json
+++ b/0x00-Webpack/task_2/package.json
@@ -4,22 +4,25 @@
 	"description": "",
 	"main": "index.js",
 	"dependencies": {
-	  "jquery": "^3.6.0",
-	  "lodash": "^4.17.21"
+		"jquery": "^3.6.0",
+		"lodash": "^4.17.21"
 	},
 	"scripts": {
-	  "test": "echo \"Error: no test specified\" && exit 1",
-	  "build": "webpack"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack",
+		"start": "webpack serve --open"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-	  "css-loader": "^6.7.1",
-	  "file-loader": "^6.2.0",
-	  "image-webpack-loader": "^8.1.0",
-	  "style-loader": "^3.3.1",
-	  "webpack": "^5.70.0",
-	  "webpack-cli": "^4.9.2"
+		"copy-webpack-plugin": "^12.0.2",
+		"css-loader": "^6.7.1",
+		"file-loader": "^6.2.0",
+		"image-webpack-loader": "^8.1.0",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4"
 	}
-  }
+}
